feat: add Model, Repository, Rest and tests for ExempleCrud
