# public/docs/openapi.json
@@ -443,6 +443,231 @@
                 ]
             }
         },
+        "/example/crud/{id}": {
+            "get": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Get the ExampleCrud by id",
+                "operationId": "GET::/example/crud/{id}::Tutorial\\Rest\\ExampleCrudRest::getExampleCrud",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The object ExampleCrud",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ExampleCrud"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            }
+        },
+        "/example/crud": {
+            "get": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "List ExampleCrud",
+                "operationId": "GET::/example/crud::Tutorial\\Rest\\ExampleCrudRest::listExampleCrud",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "description": "Page size",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "orderBy",
+                        "in": "query",
+                        "description": "Order by",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "filter",
+                        "in": "query",
+                        "description": "Filter",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The object ExampleCrud",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ExampleCrud"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Update an existing ExampleCrud",
+                "operationId": "PUT::/example/crud::Tutorial\\Rest\\ExampleCrudRest::putExampleCrud",
+                "requestBody": {
+                    "description": "The object ExampleCrud to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ExampleCrud"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Nothing to return"
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Create a new ExampleCrud",
+                "operationId": "POST::/example/crud::Tutorial\\Rest\\ExampleCrudRest::postExampleCrud",
+                "requestBody": {
+                    "description": "The object ExampleCrud to be created",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "birthdate": {
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "nullable": true
+                                    },
+                                    "code": {
+                                        "type": "integer",
+                                        "format": "int32",
+                                        "nullable": true
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The object rto be created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "id"
+                                    ],
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
@@ -918,6 +1143,37 @@
                     "name": "DummyHex"
                 }
             },
+            "ExampleCrud": {
+                "description": "Class ExampleCrud",
+                "required": [
+                    "id",
+                    "name"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "name": {
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "birthdate": {
+                        "type": "string",
+                        "format": "date-time",
+                        "nullable": true
+                    },
+                    "code": {
+                        "type": "integer",
+                        "format": "int32",
+                        "nullable": true
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "ExampleCrud"
+                }
+            },
             "User": {
                 "required": [
                     "email"
@@ -962,17 +1218,8 @@
                 }
             },
             "error": {
-                "required": [
-                    "error"
-                ],
                 "properties": {
                     "error": {
-                        "required": [
-                            "type",
-                            "message",
-                            "file",
-                            "line"
-                        ],
                         "properties": {
                             "type": {
                                 "description": "A class de Exceção",
@@ -1008,5 +1255,31 @@
                 "in": "header"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Dummyhex",
+            "description": "Dummyhex"
+        },
+        {
+            "name": "Dummy",
+            "description": "Dummy"
+        },
+        {
+            "name": "Example",
+            "description": "Example"
+        },
+        {
+            "name": "Login",
+            "description": "Login"
+        },
+        {
+            "name": "zz_sample",
+            "description": "zz_sample"
+        },
+        {
+            "name": "zz_sampleprotected",
+            "description": "zz_sampleprotected"
+        }
+    ]
 }
